--- a/sass/main.scss
+++ b/sass/main.scss
@@ -143,6 +143,23 @@
 /* ================================= */
 /* ================================= */
 
+/* ================================= */
+/* ================================= */
+.index-big-banner {
+	@extend %block-border;
+	height:200px;
+}
+.index-small-banner {
+	@extend %block-border;
+	height:100px;
+}
+
+/* ================================= */
+/* ================================= */
+
+
+
+
 .footer {
 	background-color: grey;
 	@extend %block-border;
