--- a/css/main.css
+++ b/css/main.css
@@ -30,17 +30,50 @@
 /* ================================= */
 /* Menu CSS */
 /* ================================= */
-/* line 29, ../sass/main.scss */
+/* line 30, ../sass/main.scss */
+.top_bar {
+  background-color: black;
+  height: 20px;
+}
+
+/* line 34, ../sass/main.scss */
+.home_button {
+  float: right;
+}
+
+/* line 37, ../sass/main.scss */
+.home_button_top {
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 9px 9px 9px;
+  border-color: transparent transparent #ffffff transparent;
+}
+
+/* line 45, ../sass/main.scss */
+.home_button_bottom {
+  margin-left: 5px;
+  width: 9px;
+  height: 9px;
+  background: white;
+}
+
+/* ================================= */
+/* ================================= */
+/* ================================= */
+/* Menu CSS */
+/* ================================= */
+/* line 60, ../sass/main.scss */
 #menu_bar {
   background-color: #2D5781;
 }
 
-/* line 33, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 .menu {
   height: 24px;
 }
 
-/* line 38, ../sass/main.scss */
+/* line 69, ../sass/main.scss */
 .list {
   display: inline-block;
   width: 10%;
@@ -48,12 +81,12 @@
   /*border: 1px solid #eee;*/
 }
 
-/* line 46, ../sass/main.scss */
+/* line 77, ../sass/main.scss */
 .subList {
   display: none;
 }
 
-/* line 51, ../sass/main.scss */
+/* line 82, ../sass/main.scss */
 .subList li {
   border-top: 1px solid black;
   list-style-type: none;
@@ -63,49 +96,49 @@
   padding-left: 50px;
 }
 
-/* line 60, ../sass/main.scss */
+/* line 91, ../sass/main.scss */
 .list:hover .subList {
   position: absolute;
   display: block;
   z-index: 100;
 }
 
-/* line 66, ../sass/main.scss */
+/* line 97, ../sass/main.scss */
 .list:hover {
   background-color: grey;
 }
 
-/* line 71, ../sass/main.scss */
+/* line 102, ../sass/main.scss */
 .subList li:hover {
   background-color: #2D5781;
 }
 
 /* ================================= */
 /* ================================= */
-/* line 80, ../sass/main.scss */
+/* line 111, ../sass/main.scss */
 .sideMenu {
   height: 500px;
 }
 
-/* line 85, ../sass/main.scss */
+/* line 116, ../sass/main.scss */
 .side_container {
   padding-top: 10px;
   height: 1000px;
 }
 
-/* line 90, ../sass/main.scss */
+/* line 121, ../sass/main.scss */
 .sidebar {
   text-align: center;
 }
-/* line 94, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 .sidebar.is-Title {
   background-color: #2D5781;
 }
-/* line 98, ../sass/main.scss */
+/* line 129, ../sass/main.scss */
 .sidebar.is-Sub {
   padding-left: 44px;
 }
-/* line 102, ../sass/main.scss */
+/* line 133, ../sass/main.scss */
 .sidebar.is-Top {
   background-color: lightblue;
 }
@@ -113,38 +146,38 @@
 /* ================================= */
 /* Product CSS */
 /* ================================= */
-/* line 109, ../sass/main.scss */
+/* line 140, ../sass/main.scss */
 #product_container {
   padding-top: 20px;
 }
 
-/* line 113, ../sass/main.scss */
+/* line 144, ../sass/main.scss */
 .product {
   /*border: 1px solid #eee;*/
   height: 200px;
 }
 
-/* line 118, ../sass/main.scss */
+/* line 149, ../sass/main.scss */
 .product .name {
   height: 10%;
 }
 
-/* line 123, ../sass/main.scss */
+/* line 154, ../sass/main.scss */
 .product .image {
   height: 50%;
 }
 
-/* line 128, ../sass/main.scss */
+/* line 159, ../sass/main.scss */
 .product .description {
   height: 20%;
 }
 
-/* line 133, ../sass/main.scss */
+/* line 164, ../sass/main.scss */
 .product .price {
   height: 10%;
 }
 
-/* line 138, ../sass/main.scss */
+/* line 169, ../sass/main.scss */
 .product .button {
   height: 10%;
 }
@@ -153,25 +186,25 @@
 /* ================================= */
 /* ================================= */
 /* ================================= */
-/* line 148, ../sass/main.scss */
+/* line 179, ../sass/main.scss */
 #index_banner {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-/* line 152, ../sass/main.scss */
+/* line 184, ../sass/main.scss */
 .index-big-banner {
   height: 200px;
 }
 
-/* line 156, ../sass/main.scss */
+/* line 188, ../sass/main.scss */
 .index-small-banner {
   height: 100px;
 }
 
 /* ================================= */
 /* ================================= */
-/* line 167, ../sass/main.scss */
+/* line 199, ../sass/main.scss */
 .footer {
   background-color: grey;
   height: 150px;
