--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,13 @@
 }
 
 /* line 102, ../sass/main.scss */
+.subList li {
+  background-color: #2D5781;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+/* line 108, ../sass/main.scss */
 .subList li:hover {
   background-color: #2D5781;
   color: #FFFFFF;
@@ -117,30 +124,30 @@
 
 /* ================================= */
 /* ================================= */
-/* line 113, ../sass/main.scss */
+/* line 119, ../sass/main.scss */
 .sideMenu {
   height: 500px;
 }
 
-/* line 118, ../sass/main.scss */
+/* line 124, ../sass/main.scss */
 .side_container {
   padding-top: 10px;
   height: 1000px;
 }
 
-/* line 123, ../sass/main.scss */
+/* line 129, ../sass/main.scss */
 .sidebar {
   text-align: center;
 }
-/* line 127, ../sass/main.scss */
+/* line 133, ../sass/main.scss */
 .sidebar.is-Title {
   background-color: #2D5781;
 }
-/* line 131, ../sass/main.scss */
+/* line 137, ../sass/main.scss */
 .sidebar.is-Sub {
   padding-left: 44px;
 }
-/* line 135, ../sass/main.scss */
+/* line 141, ../sass/main.scss */
 .sidebar.is-Top {
   background-color: lightblue;
 }
@@ -148,38 +155,38 @@
 /* ================================= */
 /* Product CSS */
 /* ================================= */
-/* line 142, ../sass/main.scss */
+/* line 148, ../sass/main.scss */
 #product_container {
   padding-top: 20px;
 }
 
-/* line 146, ../sass/main.scss */
+/* line 152, ../sass/main.scss */
 .product {
   /*border: 1px solid #eee;*/
   height: 200px;
 }
 
-/* line 151, ../sass/main.scss */
+/* line 157, ../sass/main.scss */
 .product .name {
   height: 10%;
 }
 
-/* line 156, ../sass/main.scss */
+/* line 162, ../sass/main.scss */
 .product .image {
   height: 50%;
 }
 
-/* line 161, ../sass/main.scss */
+/* line 167, ../sass/main.scss */
 .product .description {
   height: 20%;
 }
 
-/* line 166, ../sass/main.scss */
+/* line 172, ../sass/main.scss */
 .product .price {
   height: 10%;
 }
 
-/* line 171, ../sass/main.scss */
+/* line 177, ../sass/main.scss */
 .product .button {
   height: 10%;
 }
@@ -188,25 +195,25 @@
 /* ================================= */
 /* ================================= */
 /* ================================= */
-/* line 181, ../sass/main.scss */
+/* line 187, ../sass/main.scss */
 #index_banner {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-/* line 186, ../sass/main.scss */
+/* line 192, ../sass/main.scss */
 .index-big-banner {
   height: 200px;
 }
 
-/* line 190, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 .index-small-banner {
   height: 100px;
 }
 
 /* ================================= */
 /* ================================= */
-/* line 201, ../sass/main.scss */
+/* line 207, ../sass/main.scss */
 .footer {
   background-color: grey;
   height: 150px;
