--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,6 +99,12 @@
 	
 }
 
+.subList li {
+	background-color: #2D5781;
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
 .subList li:hover {
 	background-color: #2D5781;
 	color: #FFFFFF;
