--- a/sass/main.scss
+++ b/sass/main.scss
@@ -181,6 +181,22 @@
 /* ================================= */
 
 /* ================================= */
+/* Item Css */
+/* ================================= */
+
+.item-image {
+@extend %block-border;
+}
+
+.tem-description {
+@extend %block-border;
+}
+
+/* ================================= */
+/* ================================= */
+
+/* ================================= */
+/* Index Banner */
 /* ================================= */
 #index_banner {
 	padding-left: 15px;
