--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* line 1, ../sass/main.scss */
-#container, .menu, .sideMenu, .sidebar, .product .name, .product .image, .product .description, .product .price, .product .button, .item-image, .tem-description, .index-big-banner, .index-small-banner, .footer {
+#container, .menu, .sideMenu, .sidebar, .product .name, .product .image, .product .description, .product .price, .product .button, .item-image-container, .tem-description, .index-big-banner, .index-small-banner, .footer {
   border: 1px solid #eee;
 }
 
@@ -194,30 +194,50 @@
 /* ================================= */
 /* Item Css */
 /* ================================= */
+/* line 186, ../sass/main.scss */
+#item_container {
+  padding-top: 20px;
+}
+
+/* line 191, ../sass/main.scss */
+.item-image-container {
+  height: 600px;
+}
+
+/* line 196, ../sass/main.scss */
+.item-image-container {
+  height: 400px;
+}
+
+/* line 201, ../sass/main.scss */
+.tem-description {
+  height: 600px;
+}
+
 /* ================================= */
 /* ================================= */
 /* ================================= */
 /* Index Banner */
 /* ================================= */
-/* line 201, ../sass/main.scss */
+/* line 212, ../sass/main.scss */
 #index_banner {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-/* line 206, ../sass/main.scss */
+/* line 217, ../sass/main.scss */
 .index-big-banner {
   height: 200px;
 }
 
-/* line 210, ../sass/main.scss */
+/* line 221, ../sass/main.scss */
 .index-small-banner {
   height: 100px;
 }
 
 /* ================================= */
 /* ================================= */
-/* line 221, ../sass/main.scss */
+/* line 232, ../sass/main.scss */
 .footer {
   background-color: grey;
   height: 150px;
