--- a/sass/main.scss
+++ b/sass/main.scss
@@ -144,7 +144,7 @@
 /* Product CSS */
 /* ================================= */
 #product_container {
-	padding-top:20px;
+	padding-top:10px;
 }
 
 .product {
@@ -184,7 +184,7 @@
 /* Item Css */
 /* ================================= */
 #item_container {
-	padding-top:20px;
+	padding-top:10px;
 }
 
 
@@ -197,7 +197,7 @@
 
 .item-image {
 	@extend %block-border;
-	height:80%;
+	height:78%;
 }
 
 .item-content {
@@ -207,9 +207,16 @@
 
 .item-description{
 	@extend %block-border;
-	height:20%;
+	height:18%;
+	margin-top:4%;
 }
 
+.item-sugget-container{
+	@extend %block-border;
+	height:300px;
+	margin-top:4%;
+
+}
 /* ================================= */
 /* ================================= */
 
