--- a/sass/main.scss
+++ b/sass/main.scss
@@ -211,7 +211,7 @@
 	margin-top:4%;
 }
 
-.item-sugget-container{
+.item-suggest-container{
 	@extend %block-border;
 	height:300px;
 	margin-top:4%;
