--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
 }
 
 /* ================================= */
-/* Menu CSS */
+/* Top Bar CSS */
 /* ================================= */
 /* line 30, ../sass/main.scss */
 .top_bar {
@@ -58,22 +58,41 @@
   background: white;
 }
 
+/* line 52, ../sass/main.scss */
+.line {
+  float: right;
+  padding-right: 10px;
+  border-right-width: 1px;
+  border-right-style: solid;
+  border-right-color: white;
+  position: relative;
+  display: block;
+  z-index: 65;
+}
+
+/* line 63, ../sass/main.scss */
+.top_bar_info {
+  float: right;
+  padding-right: 10px;
+  color: white;
+}
+
 /* ================================= */
 /* ================================= */
 /* ================================= */
 /* Menu CSS */
 /* ================================= */
-/* line 60, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 #menu_bar {
   background-color: #2D5781;
 }
 
-/* line 64, ../sass/main.scss */
+/* line 80, ../sass/main.scss */
 .menu {
   height: 24px;
 }
 
-/* line 69, ../sass/main.scss */
+/* line 85, ../sass/main.scss */
 .list {
   display: inline-block;
   width: 10%;
@@ -81,12 +100,12 @@
   /*border: 1px solid #eee;*/
 }
 
-/* line 77, ../sass/main.scss */
+/* line 93, ../sass/main.scss */
 .subList {
   display: none;
 }
 
-/* line 82, ../sass/main.scss */
+/* line 98, ../sass/main.scss */
 .subList li {
   border-top: 1px solid black;
   list-style-type: none;
@@ -96,25 +115,25 @@
   padding-left: 50px;
 }
 
-/* line 91, ../sass/main.scss */
+/* line 107, ../sass/main.scss */
 .list:hover .subList {
   position: absolute;
   display: block;
   z-index: 100;
 }
 
-/* line 97, ../sass/main.scss */
+/* line 113, ../sass/main.scss */
 .list:hover {
   background-color: grey;
 }
 
-/* line 102, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .subList li {
   color: white;
   text-decoration: none;
 }
 
-/* line 107, ../sass/main.scss */
+/* line 123, ../sass/main.scss */
 .subList li:hover {
   background-color: #2D5781;
   text-decoration: none;
@@ -122,69 +141,74 @@
 
 /* ================================= */
 /* ================================= */
-/* line 117, ../sass/main.scss */
+/* ================================= */
+/* Product CSS */
+/* ================================= */
+/* line 135, ../sass/main.scss */
 .sideMenu {
-  height: 500px;
+  height: 900px;
 }
 
-/* line 122, ../sass/main.scss */
+/* line 140, ../sass/main.scss */
 .side_container {
   padding-top: 10px;
   height: 1000px;
 }
 
-/* line 127, ../sass/main.scss */
+/* line 145, ../sass/main.scss */
 .sidebar {
   text-align: center;
 }
-/* line 131, ../sass/main.scss */
+/* line 149, ../sass/main.scss */
 .sidebar.is-Title {
   background-color: #2D5781;
 }
-/* line 135, ../sass/main.scss */
+/* line 153, ../sass/main.scss */
 .sidebar.is-Sub {
   padding-left: 44px;
 }
-/* line 139, ../sass/main.scss */
+/* line 157, ../sass/main.scss */
 .sidebar.is-Top {
   background-color: lightblue;
 }
 
 /* ================================= */
+/* ================================= */
+/* ================================= */
 /* Product CSS */
 /* ================================= */
-/* line 146, ../sass/main.scss */
+/* line 167, ../sass/main.scss */
 #product_container {
   padding-top: 10px;
 }
 
-/* line 150, ../sass/main.scss */
+/* line 171, ../sass/main.scss */
 .product {
   /*border: 1px solid #eee;*/
   height: 200px;
 }
 
-/* line 155, ../sass/main.scss */
+/* line 176, ../sass/main.scss */
 .product .name {
   height: 10%;
 }
 
-/* line 160, ../sass/main.scss */
+/* line 181, ../sass/main.scss */
 .product .image {
   height: 50%;
 }
 
-/* line 165, ../sass/main.scss */
+/* line 186, ../sass/main.scss */
 .product .description {
   height: 20%;
 }
 
-/* line 170, ../sass/main.scss */
+/* line 191, ../sass/main.scss */
 .product .price {
   height: 10%;
 }
 
-/* line 175, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 .product .button {
   height: 10%;
 }
@@ -194,35 +218,35 @@
 /* ================================= */
 /* Item Css */
 /* ================================= */
-/* line 186, ../sass/main.scss */
+/* line 207, ../sass/main.scss */
 #item_container {
   padding-top: 10px;
 }
 
-/* line 191, ../sass/main.scss */
+/* line 212, ../sass/main.scss */
 .item-image-container {
   padding-left: 50px;
   padding-right: 50px;
   height: 600px;
 }
 
-/* line 198, ../sass/main.scss */
+/* line 219, ../sass/main.scss */
 .item-image {
   height: 78%;
 }
 
-/* line 203, ../sass/main.scss */
+/* line 224, ../sass/main.scss */
 .item-content {
   height: 600px;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 229, ../sass/main.scss */
 .item-description {
   height: 18%;
   margin-top: 4%;
 }
 
-/* line 214, ../sass/main.scss */
+/* line 235, ../sass/main.scss */
 .item-suggest-container {
   height: 300px;
   margin-top: 4%;
@@ -233,25 +257,25 @@
 /* ================================= */
 /* Index Banner */
 /* ================================= */
-/* line 226, ../sass/main.scss */
+/* line 247, ../sass/main.scss */
 #index_banner {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-/* line 231, ../sass/main.scss */
+/* line 252, ../sass/main.scss */
 .index-big-banner {
   height: 200px;
 }
 
-/* line 235, ../sass/main.scss */
+/* line 256, ../sass/main.scss */
 .index-small-banner {
   height: 100px;
 }
 
 /* ================================= */
 /* ================================= */
-/* line 246, ../sass/main.scss */
+/* line 267, ../sass/main.scss */
 .footer {
   background-color: grey;
   height: 150px;
