fixed button issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* line 1, ../sass/main.scss */
-#container, .menu, .sideMenu, .sidebar, .product .name, .product .image, .product .description, .product .price, .product .button, .item-image-container, .item-image, .item-content, .item-description, .item-suggest-container, .index-big-banner, .index-small-banner, .register_container, .footer {
+#container, .menu, .sideMenu, .sidebar, .product .name, .product .image, .product .description, .product .price, .product .buttons, .item-image-container, .item-image, .item-content, .item-description, .item-suggest-container, .index-big-banner, .index-small-banner, .register_container, .footer {
   border: 1px solid #eee;
 }
 
@@ -335,7 +335,7 @@ form.signin input::-webkit-input-placeholder {
 }
 
 /* line 308, ../sass/main.scss */
-.product .button {
+.product .buttons {
   height: 10%;
 }
 
