--- a/sass/main.scss
+++ b/sass/main.scss
@@ -305,7 +305,7 @@ form.signin input::-webkit-input-placeholder {
 	height:10%;
 }
 
-.product .button {
+.product .buttons {
 	@extend %block-border;
 	height:10%;
 }
