--- a/css/main.css
+++ b/css/main.css
@@ -71,13 +71,19 @@
 }
 
 /* line 63, ../sass/main.scss */
-#top_bar_info {
-  float: right;
-  padding-right: 10px;
-  color: white;
+.login_container {
+  margin-top: -20px;
+  position: absolute;
+  padding-left: 890px;
 }
 
 /* line 69, ../sass/main.scss */
+.top_bar_text {
+  color: white;
+  text-decoration: none;
+}
+
+/* line 73, ../sass/main.scss */
 #mask {
   display: none;
   background: #000;
@@ -92,7 +98,7 @@
 }
 
 /* You can customize to your needs  */
-/* line 83, ../sass/main.scss */
+/* line 87, ../sass/main.scss */
 .login-popup {
   display: none;
   background: #333;
@@ -117,36 +123,36 @@
   /* Safari, Chrome */
 }
 
-/* line 107, ../sass/main.scss */
+/* line 111, ../sass/main.scss */
 img.btn_close {
   float: right;
   margin: -28px -28px 0 0;
 }
 
-/* line 112, ../sass/main.scss */
+/* line 116, ../sass/main.scss */
 fieldset {
   border: none;
 }
 
-/* line 116, ../sass/main.scss */
+/* line 120, ../sass/main.scss */
 form.signin .textbox label {
   display: block;
   padding-bottom: 7px;
 }
 
-/* line 121, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 form.signin .textbox span {
   display: block;
 }
 
-/* line 125, ../sass/main.scss */
+/* line 129, ../sass/main.scss */
 form.signin p, form.signin span {
   color: #999;
   font-size: 11px;
   line-height: 18px;
 }
 
-/* line 131, ../sass/main.scss */
+/* line 135, ../sass/main.scss */
 form.signin .textbox input {
   background: #666666;
   border-bottom: 1px solid #333;
@@ -162,19 +168,19 @@ form.signin .textbox input {
   width: 200px;
 }
 
-/* line 146, ../sass/main.scss */
+/* line 150, ../sass/main.scss */
 form.signin input:-moz-placeholder {
   color: #bbb;
   text-shadow: 0 0 2px #000;
 }
 
-/* line 151, ../sass/main.scss */
+/* line 155, ../sass/main.scss */
 form.signin input::-webkit-input-placeholder {
   color: #bbb;
   text-shadow: 0 0 2px #000;
 }
 
-/* line 156, ../sass/main.scss */
+/* line 160, ../sass/main.scss */
 .button {
   background: -moz-linear-gradient(center top, #f3f3f3, #dddddd);
   background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#dddddd));
@@ -194,7 +200,7 @@ form.signin input::-webkit-input-placeholder {
   width: 214px;
 }
 
-/* line 175, ../sass/main.scss */
+/* line 179, ../sass/main.scss */
 .button:hover {
   background: #ddd;
 }
@@ -204,17 +210,17 @@ form.signin input::-webkit-input-placeholder {
 /* ================================= */
 /* Menu CSS */
 /* ================================= */
-/* line 186, ../sass/main.scss */
+/* line 190, ../sass/main.scss */
 #menu_bar {
   background-color: #2D5781;
 }
 
-/* line 190, ../sass/main.scss */
+/* line 194, ../sass/main.scss */
 .menu {
   height: 24px;
 }
 
-/* line 195, ../sass/main.scss */
+/* line 199, ../sass/main.scss */
 .list {
   display: inline-block;
   width: 10%;
@@ -222,12 +228,12 @@ form.signin input::-webkit-input-placeholder {
   /*border: 1px solid #eee;*/
 }
 
-/* line 203, ../sass/main.scss */
+/* line 207, ../sass/main.scss */
 .subList {
   display: none;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 212, ../sass/main.scss */
 .subList li {
   border-top: 1px solid black;
   list-style-type: none;
@@ -237,25 +243,25 @@ form.signin input::-webkit-input-placeholder {
   padding-left: 50px;
 }
 
-/* line 217, ../sass/main.scss */
+/* line 221, ../sass/main.scss */
 .list:hover .subList {
   position: absolute;
   display: block;
   z-index: 100;
 }
 
-/* line 223, ../sass/main.scss */
+/* line 227, ../sass/main.scss */
 .list:hover {
   background-color: grey;
 }
 
-/* line 228, ../sass/main.scss */
+/* line 232, ../sass/main.scss */
 .subList li {
   color: white;
   text-decoration: none;
 }
 
-/* line 233, ../sass/main.scss */
+/* line 237, ../sass/main.scss */
 .subList li:hover {
   background-color: #2D5781;
   text-decoration: none;
@@ -266,34 +272,34 @@ form.signin input::-webkit-input-placeholder {
 /* ================================= */
 /* Side Menu CSS */
 /* ================================= */
-/* line 245, ../sass/main.scss */
+/* line 249, ../sass/main.scss */
 .sideMenu {
   height: 900px;
 }
 
-/* line 250, ../sass/main.scss */
+/* line 254, ../sass/main.scss */
 .side_container {
   padding-top: 10px;
   height: 1000px;
 }
 
-/* line 255, ../sass/main.scss */
+/* line 259, ../sass/main.scss */
 .sidebar {
   text-align: center;
 }
-/* line 259, ../sass/main.scss */
+/* line 263, ../sass/main.scss */
 .sidebar.is-Title {
   background-color: #2D5781;
 }
-/* line 262, ../sass/main.scss */
+/* line 266, ../sass/main.scss */
 .sidebar.is-Title.NewArrival {
   margin-top: 5px;
 }
-/* line 266, ../sass/main.scss */
+/* line 270, ../sass/main.scss */
 .sidebar.is-Arrival {
   height: 10%;
 }
-/* line 269, ../sass/main.scss */
+/* line 273, ../sass/main.scss */
 .sidebar.is-Top {
   background-color: lightblue;
 }
@@ -303,38 +309,38 @@ form.signin input::-webkit-input-placeholder {
 /* ================================= */
 /* Product CSS */
 /* ================================= */
-/* line 279, ../sass/main.scss */
+/* line 283, ../sass/main.scss */
 #product_container {
   padding-top: 10px;
 }
 
-/* line 283, ../sass/main.scss */
+/* line 287, ../sass/main.scss */
 .product {
   /*border: 1px solid #eee;*/
   height: 200px;
 }
 
-/* line 288, ../sass/main.scss */
+/* line 292, ../sass/main.scss */
 .product .name {
   height: 10%;
 }
 
-/* line 293, ../sass/main.scss */
+/* line 297, ../sass/main.scss */
 .product .image {
   height: 50%;
 }
 
-/* line 298, ../sass/main.scss */
+/* line 302, ../sass/main.scss */
 .product .description {
   height: 20%;
 }
 
-/* line 303, ../sass/main.scss */
+/* line 307, ../sass/main.scss */
 .product .price {
   height: 10%;
 }
 
-/* line 308, ../sass/main.scss */
+/* line 312, ../sass/main.scss */
 .product .buttons {
   height: 10%;
 }
@@ -344,35 +350,35 @@ form.signin input::-webkit-input-placeholder {
 /* ================================= */
 /* Item Css */
 /* ================================= */
-/* line 319, ../sass/main.scss */
+/* line 323, ../sass/main.scss */
 #item_container {
   padding-top: 10px;
 }
 
-/* line 324, ../sass/main.scss */
+/* line 328, ../sass/main.scss */
 .item-image-container {
   padding-left: 50px;
   padding-right: 50px;
   height: 600px;
 }
 
-/* line 331, ../sass/main.scss */
+/* line 335, ../sass/main.scss */
 .item-image {
   height: 78%;
 }
 
-/* line 336, ../sass/main.scss */
+/* line 340, ../sass/main.scss */
 .item-content {
   height: 600px;
 }
 
-/* line 341, ../sass/main.scss */
+/* line 345, ../sass/main.scss */
 .item-description {
   height: 18%;
   margin-top: 4%;
 }
 
-/* line 347, ../sass/main.scss */
+/* line 351, ../sass/main.scss */
 .item-suggest-container {
   height: 300px;
   margin-top: 4%;
@@ -383,18 +389,18 @@ form.signin input::-webkit-input-placeholder {
 /* ================================= */
 /* Index Banner */
 /* ================================= */
-/* line 359, ../sass/main.scss */
+/* line 363, ../sass/main.scss */
 #index_banner {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-/* line 364, ../sass/main.scss */
+/* line 368, ../sass/main.scss */
 .index-big-banner {
   height: 200px;
 }
 
-/* line 368, ../sass/main.scss */
+/* line 372, ../sass/main.scss */
 .index-small-banner {
   height: 100px;
 }
@@ -404,14 +410,14 @@ form.signin input::-webkit-input-placeholder {
 /* ================================= */
 /* Login */
 /* ================================= */
-/* line 384, ../sass/main.scss */
+/* line 388, ../sass/main.scss */
 .register_container {
   height: 400px;
 }
 
 /* ================================= */
 /* ================================= */
-/* line 392, ../sass/main.scss */
+/* line 396, ../sass/main.scss */
 .footer {
   background-color: grey;
   height: 150px;
