--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@
 }
 
 /* line 63, ../sass/main.scss */
-.login_container {
+.login-container {
   margin-top: -20px;
   position: absolute;
   padding-left: 890px;
