--- a/sass/main.scss
+++ b/sass/main.scss
@@ -66,6 +66,11 @@
 	padding-left: 890px;
 }
 
+.register_form {
+	padding-right: 20px;
+	padding-left: 20px;
+}
+
 .top_bar_text {
 	color: white;
 	text-decoration: none;
